--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.bg{
+   width: 100%;
+   height: 100%;
+   /*background: url(/assets/images/athena-drawn.png) no-repeat center;*/
+   background-color: #b9baa9;
+   /*width: 100vw;*/
+   min-height: 100vh;
+   /*background-size: 100% 100%;*/
+   background-position: top center;
+}
